--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "isomorphic-fetch": "^2.2.1",
     "libsodium-wrappers": "^0.7.6",
+    "spark-md5": "^3.0.1",
     "uuid": "^3.4.0"
   },
   "devDependencies": {
