--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toznysecure/sdk",
-  "version": "1.0.0-aplpha.19",
+  "version": "1.0.0-alpha.20",
   "description": "Tozny Platform software developers kit.",
   "main": "index.js",
   "scripts": {
