--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ branches:
   except:
     - /^hack\/.*$/
 install: npm ci --production
+script: npm run ci-test
 env:
   global:
     - TEST_LOCAL_USE_PROD=false
