--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 sudo: false
 language: node_js
+node_js:
+  - 12
+  - 8.3 # Earliest supported version
 git:
   depth: 1
   quiet: true
@@ -14,13 +17,17 @@ env:
     - TEST_IDLE_TIMEOUT_MILLISECONDS=100000
     - TEST_ENVIRONMENT=remote
     - TEST_BROWSER_VERSION=latest
+  jobs:
+    - TEST_TARGET=node
+    - TEST_TARGET=browser TEST_BROWSER=safari TEST_BROWSER_PLATFORM='macOS 10.14'
+    - TEST_TARGET=browser TEST_BROWSER=firefox TEST_BROWSER_PLATFORM='macOS 10.14'
+    - TEST_TARGET=browser TEST_BROWSER=chrome TEST_BROWSER_PLATFORM='macOS 10.14'
 jobs:
-  include:
-    - name: "Node Environments"
-      node_js:
-        - 12
-        - 8.3 # Earliest supported version
-      env: TEST_TARGET=node
+  exclude:
+    - node_js: 8.3
+      env: TEST_TARGET=browser
+    - node_js: 12
+      env: TEST_TARGET=browser
     # - name: "Browser Environments"
     #   node_js: 12 # This just runs the tests, versions are managed by Sauce Labs
     #   addons:
