Be more explicit in the excludes"

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,9 +25,15 @@ env:
 jobs:
   exclude:
     - node_js: 8.3
-      env: TEST_TARGET=browser
+      env:
+      - TEST_TARGET=browser TEST_BROWSER=safari TEST_BROWSER_PLATFORM='macOS 10.14'
+      - TEST_TARGET=browser TEST_BROWSER=firefox TEST_BROWSER_PLATFORM='macOS 10.14'
+      - TEST_TARGET=browser TEST_BROWSER=chrome TEST_BROWSER_PLATFORM='macOS 10.14'
     - node_js: 12
-      env: TEST_TARGET=browser
+      env:
+      - TEST_TARGET=browser TEST_BROWSER=safari TEST_BROWSER_PLATFORM='macOS 10.14'
+      - TEST_TARGET=browser TEST_BROWSER=firefox TEST_BROWSER_PLATFORM='macOS 10.14'
+      - TEST_TARGET=browser TEST_BROWSER=chrome TEST_BROWSER_PLATFORM='macOS 10.14'
     # - name: "Browser Environments"
     #   node_js: 12 # This just runs the tests, versions are managed by Sauce Labs
     #   addons:
