--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,4 @@
 language: node_js
-node_js:
-  - 12
-  - 8.3 # Earliest supported version
 git:
   depth: 1
   quiet: true
@@ -16,14 +13,13 @@ env:
     - TEST_IDLE_TIMEOUT_MILLISECONDS=100000
     - TEST_ENVIRONMENT=remote
     - TEST_BROWSER_VERSION=latest
-  jobs:
-    - TEST_TARGET=node
-    - TEST_TARGET=browser TEST_BROWSER=safari TEST_BROWSER_PLATFORM="macOS 10.14"
-    - TEST_TARGET=browser TEST_BROWSER=firefox TEST_BROWSER_PLATFORM="macOS 10.14"
-    - TEST_TARGET=browser TEST_BROWSER=chrome TEST_BROWSER_PLATFORM="macOS 10.14"
 jobs:
   include:
     - node_js: 8.3
       env: TEST_TARGET=node
     - node_js: 12
       env: TEST_TARGET=node
+    # - TEST_TARGET=node
+    # - TEST_TARGET=browser TEST_BROWSER=safari TEST_BROWSER_PLATFORM="macOS 10.14"
+    # - TEST_TARGET=browser TEST_BROWSER=firefox TEST_BROWSER_PLATFORM="macOS 10.14"
+    # - TEST_TARGET=browser TEST_BROWSER=chrome TEST_BROWSER_PLATFORM="macOS 10.14"
