--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ jobs:
     #   env: TEST_TARGET=node
     # - node_js: 12
     #   env: TEST_TARGET=node
-    # - node_js: 12
-    - env: TEST_TARGET=browser TEST_BROWSER=firefox TEST_BROWSER_PLATFORM="macOS 10.14"
+    - node_js: 12
+      env: TEST_TARGET=browser TEST_BROWSER=firefox TEST_BROWSER_PLATFORM="macOS 10.14"
       addons:
         sauce_connect: true
