--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,8 @@ jobs:
   include:
     - node_js: 8.3
       env: TEST_TARGET=node
+    - node_js: 10
+      env: TEST_TARGET=node
     - node_js: 12
       env: TEST_TARGET=node
     - node_js: 12
@@ -29,5 +31,13 @@ jobs:
         sauce_connect: true
     - node_js: 12
       env: TEST_TARGET=browser TEST_BROWSER=safari TEST_BROWSER_PLATFORM="macOS 10.14"
+      addons:
+        sauce_connect: true
+    - node_js: 12
+      env: TEST_TARGET=browser TEST_BROWSER=chrome TEST_BROWSER_PLATFORM="Windows 10"
+      addons:
+        sauce_connect: true
+    - node_js: 12
+      env: TEST_TARGET=browser TEST_BROWSER=firefox TEST_BROWSER_PLATFORM="Windows 10"
       addons:
         sauce_connect: true
