--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0-beta.1",
   "description": "Tozny Platform software developers kit.",
   "main": "index.js",
+  "engines": {
+    "node": ">= 8.3"
+  },
   "scripts": {
     "test": "jest",
     "pretest": "npm run build:dev",
