--- a/.travis.yml
+++ b/.travis.yml
@@ -15,29 +15,29 @@ env:
     - TEST_BROWSER_VERSION=latest
 jobs:
   include:
-    # - node_js: 8.3
-    #   env: TEST_TARGET=node
-    # - node_js: 10
-    #   env: TEST_TARGET=node
-    # - node_js: 12
-    #   env: TEST_TARGET=node
+    - node_js: 8.3
+      env: TEST_TARGET=node
+    - node_js: 10
+      env: TEST_TARGET=node
+    - node_js: 12
+      env: TEST_TARGET=node
     - node_js: 12
       env: TEST_TARGET=browser TEST_BROWSER=firefox TEST_BROWSER_PLATFORM="macOS 10.14"
       addons:
         sauce_connect: true
-    # - node_js: 12
-    #   env: TEST_TARGET=browser TEST_BROWSER=chrome TEST_BROWSER_PLATFORM="macOS 10.14"
-    #   addons:
-    #     sauce_connect: true
-    # - node_js: 12
-    #   env: TEST_TARGET=browser TEST_BROWSER=safari TEST_BROWSER_PLATFORM="macOS 10.14"
-    #   addons:
-    #     sauce_connect: true
-    # - node_js: 12
-    #   env: TEST_TARGET=browser TEST_BROWSER=chrome TEST_BROWSER_PLATFORM="Windows 10"
-    #   addons:
-    #     sauce_connect: true
-    # - node_js: 12
-    #   env: TEST_TARGET=browser TEST_BROWSER=firefox TEST_BROWSER_PLATFORM="Windows 10"
-    #   addons:
-    #     sauce_connect: true
+    - node_js: 12
+      env: TEST_TARGET=browser TEST_BROWSER=chrome TEST_BROWSER_PLATFORM="macOS 10.14"
+      addons:
+        sauce_connect: true
+    - node_js: 12
+      env: TEST_TARGET=browser TEST_BROWSER=safari TEST_BROWSER_PLATFORM="macOS 10.14"
+      addons:
+        sauce_connect: true
+    - node_js: 12
+      env: TEST_TARGET=browser TEST_BROWSER=chrome TEST_BROWSER_PLATFORM="Windows 10"
+      addons:
+        sauce_connect: true
+    - node_js: 12
+      env: TEST_TARGET=browser TEST_BROWSER=firefox TEST_BROWSER_PLATFORM="Windows 10"
+      addons:
+        sauce_connect: true
