Only build master and pull requests to save build time

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ git:
   depth: 1
   quiet: true
 branches:
+  only:
+    - master
+    - /^test\/.*$/
   except:
     - /^hack\/.*$/
 script: npx jest
