--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "eslint-plugin-prettier": "^3.1.2",
     "husky": "^3.1.0",
     "jest": "^25.1.0",
+    "jest-circus": "^25.3.0",
     "jest-cli": "^25.1.0",
     "jest-fetch-mock": "^2.1.2",
     "lint-staged": "^9.5.0",
