--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0-beta.1",
   "description": "Tozny Platform software developers kit.",
   "main": "index.js",
+  "engines": {
+    "node": ">= 8.3"
+  },
   "scripts": {
     "test": "jest",
     "pretest": "npm run build:dev",
@@ -45,8 +48,9 @@
     "eslint-plugin-jest": "^23.8.2",
     "eslint-plugin-prettier": "^3.1.2",
     "husky": "^3.1.0",
-    "jest": "^25.1.0",
-    "jest-cli": "^25.1.0",
+    "jest": "^25.3.0",
+    "jest-circus": "^25.3.0",
+    "jest-cli": "^25.3.0",
     "jest-fetch-mock": "^2.1.2",
     "lint-staged": "^9.5.0",
     "prettier": "^1.19.1",
