--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "lint-staged": "^9.5.0",
     "prettier": "^1.19.1",
     "selenium-webdriver": "^4.0.0-alpha.7",
+    "typescript": "^4.1.3",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11"
   },
