--- a/.travis.yml
+++ b/.travis.yml
@@ -25,15 +25,15 @@ jobs:
     - node_js: 12
       env: TEST_TARGET=node
     - node_js: 12
-      env: TEST_TARGET=browser TEST_BROWSER=firefox TEST_BROWSER_PLATFORM="macOS 10.14"
+      env: TEST_TARGET=browser TEST_BROWSER=firefox TEST_BROWSER_PLATFORM="macOS 11.00"
       addons:
         sauce_connect: true
     - node_js: 12
-      env: TEST_TARGET=browser TEST_BROWSER=chrome TEST_BROWSER_PLATFORM="macOS 10.14"
+      env: TEST_TARGET=browser TEST_BROWSER=chrome TEST_BROWSER_PLATFORM="macOS 11.00"
       addons:
         sauce_connect: true
     - node_js: 12
-      env: TEST_TARGET=browser TEST_BROWSER=safari TEST_BROWSER_PLATFORM="macOS 10.14"
+      env: TEST_TARGET=browser TEST_BROWSER=safari TEST_BROWSER_PLATFORM="macOS 11.00"
       addons:
         sauce_connect: true
     - node_js: 12
@@ -42,5 +42,9 @@ jobs:
         sauce_connect: true
     - node_js: 12
       env: TEST_TARGET=browser TEST_BROWSER=firefox TEST_BROWSER_PLATFORM="Windows 10"
+      addons:
+        sauce_connect: true
+    - node_js: 12
+      env: TEST_TARGET=browser TEST_BROWSER=MicrosoftEdge TEST_BROWSER_PLATFORM="Windows 10"
       addons:
         sauce_connect: true
