--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toznysecure/sdk",
-  "version": "1.0.1-alpha.11",
+  "version": "1.0.2",
   "description": "Tozny Platform software developers kit.",
   "main": "index.js",
   "engines": {
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "jest",
     "pretest": "npm run build:dev",
-    "build": "webpack --config webpack.config.js --env=production",
+    "build": "webpack --config webpack.config.js --env production",
     "build:dev": "webpack --config webpack.config.js"
   },
   "repository": {
@@ -36,28 +36,26 @@
   },
   "homepage": "https://github.com/tozny/js-sdk#readme",
   "dependencies": {
-    "isomorphic-fetch": "^2.2.1",
-    "libsodium-wrappers": "0.7.6",
+    "cross-fetch": "^3.0.6",
+    "libsodium-wrappers": "^0.7.9",
     "spark-md5": "^3.0.1",
-    "uuid": "^8.3.0"
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.0",
-    "eslint-plugin-jest": "^23.8.2",
-    "eslint-plugin-prettier": "^3.1.2",
-    "husky": "^3.1.0",
-    "jest": "^25.3.0",
-    "jest-circus": "^25.3.0",
-    "jest-cli": "^25.3.0",
-    "jest-fetch-mock": "^3.0.3",
-    "lint-staged": "^9.5.0",
-    "prettier": "^1.19.1",
-    "selenium-webdriver": "^4.0.0-alpha.7",
-    "typescript": "^4.1.3",
-    "webpack": "^4.42.0",
-    "webpack-cli": "^3.3.11"
+    "eslint": "^7.21.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-jest": "^24.2.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "husky": "^5.1.3",
+    "jest": "^26.6.3",
+    "jest-circus": "^26.6.3",
+    "jest-cli": "^26.6.3",
+    "lint-staged": "^10.5.4",
+    "prettier": "^2.2.1",
+    "selenium-webdriver": "^4.0.0-beta.1",
+    "webpack": "^5.24.4",
+    "webpack-cli": "^4.5.0"
   },
   "husky": {
     "hooks": {
