removing search service and file sharing

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "jest",
     "pretest": "npm run build:dev",
-    "build": "webpack --config webpack.config.js --env production",
+    "build": "webpack --config webpack.config.js --env=production",
     "build:dev": "webpack --config webpack.config.js"
   },
   "repository": {
