--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toznysecure/sdk",
-  "version": "1.0.2",
+  "version": "1.0.1-alpha.13",
   "description": "Tozny Platform software developers kit.",
   "main": "index.js",
   "engines": {
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "jest",
     "pretest": "npm run build:dev",
-    "build": "webpack --config webpack.config.js --env production",
+    "build": "webpack --config webpack.config.js --env=production",
     "build:dev": "webpack --config webpack.config.js"
   },
   "repository": {
