--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-jest": "^24.2.0",
     "eslint-plugin-prettier": "^3.3.1",
+    "glob-parent": ">=5.1.2",
     "husky": "^5.2.0",
     "jest": "^26.6.3",
     "jest-circus": "^26.6.3",
