--- a/package.json
+++ b/package.json
@@ -56,7 +56,9 @@
     "prettier": "^2.2.1",
     "selenium-webdriver": "^4.0.0-beta.1",
     "webpack": "^5.24.4",
-    "webpack-cli": "^4.6.0"
+    "webpack-cli": "^4.6.0",
+    "set-value": ">=4.0.1",
+    "tmpl": ">=1.0.5"
   },
   "husky": {
     "hooks": {
