change signature for createAccessRequest
* removes `requestorId` from `createAccessRequest`. doing this encapsulates
  the fact that the current client is the requestor for opening access
  requests.
* additionally rearranges the argument order for better UX

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@ TEST_BROWSER=safari
 TEST_TARGET=node
 TEST_IDLE_TIMEOUT_MILLISECONDS=1000
 API_URL=https://dev.e3db.com
-CLIENT_REGISTRATION_TOKEN=
-ID_REALM_NAME=IntegrationTest3d1d48cab605
-ID_APP_NAME=integration-test
+CLIENT_REGISTRATION_TOKEN=<existing_client_token_here>
+ID_REALM_NAME=<existing_realm_name_here>
+ID_APP_NAME=account
+TEST_TOZID_GROUP_ID=<existing_group_id_here>
