[WR-175] change search access request signature
* changes multiple filter array arguments to be a single filters object

--- a/.env.example
+++ b/.env.example
@@ -5,4 +5,4 @@ API_URL=https://dev.e3db.com
 CLIENT_REGISTRATION_TOKEN=<existing_client_token_here>
 ID_REALM_NAME=<existing_realm_name_here>
 ID_APP_NAME=account
-TEST_TOZID_GROUP_ID=<existing_group_id_here>
+TEST_TOZID_GROUP_ID=<existing_group_id_that_has_access_policy_here>
