--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toznysecure/sdk",
-  "version": "1.4.2-alpha.1",
+  "version": "1.4.2",
   "description": "Tozny Platform software developers kit.",
   "main": "index.js",
   "engines": {
