--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "node": ">= 10"
   },
   "scripts": {
+    "lint": "eslint --fix 'browser/' 'lib/' 'node/' 'types/' '__tests__/'",
+    "prettier": "prettier --write {browser,lib,node,types}",
     "test": "jest",
     "pretest": "npm run build:dev",
     "build": "webpack --config webpack.config.js --env=production",
@@ -42,23 +44,23 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@toznysecure/eslint-config": "^1.0.0",
+    "@toznysecure/prettier-config": "^1.0.0",
     "dotenv": "^8.2.0",
-    "eslint": "^7.21.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-jest": "^24.2.0",
-    "eslint-plugin-prettier": "^3.3.1",
+    "eslint": "^8.7.0",
+    "eslint-plugin-jest": "^25.7.0",
     "glob-parent": ">=5.1.2",
     "husky": "^5.2.0",
     "jest": "^26.6.3",
     "jest-circus": "^26.6.3",
     "jest-cli": "^26.6.3",
     "lint-staged": "^10.5.4",
-    "prettier": "^2.2.1",
+    "prettier": "^2.5.1",
     "selenium-webdriver": "^4.0.0-beta.1",
-    "webpack": "^5.24.4",
-    "webpack-cli": "^4.6.0",
     "set-value": ">=4.0.1",
-    "tmpl": ">=1.0.5"
+    "tmpl": ">=1.0.5",
+    "webpack": "^5.24.4",
+    "webpack-cli": "^4.6.0"
   },
   "husky": {
     "hooks": {
@@ -68,7 +70,8 @@
   "lint-staged": {
     "*.js": [
       "eslint --fix",
-      "git add"
+      "prettier --write"
     ]
-  }
+  },
+  "prettier": "@toznysecure/prettier-config"
 }
