--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "dependencies": {
     "cross-fetch": "^3.0.6",
     "libsodium-wrappers": "^0.7.9",
+    "rfc4648": "^1.5.1",
     "spark-md5": "^3.0.1",
     "uuid": "^8.3.2"
   },
