--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "jest": "^26.6.3",
     "jest-circus": "^26.6.3",
     "jest-cli": "^26.6.3",
+    "jest-html-reporter": "^3.5.0",
     "lint-staged": "^10.5.4",
     "prettier": "^2.5.1",
     "selenium-webdriver": "^4.0.0-beta.1",
