--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,4 @@ CLIENT_REGISTRATION_TOKEN=<existing_client_token_here>
 ID_REALM_NAME=<existing_realm_name_here>
 ID_APP_NAME=account
 TEST_TOZID_GROUP_ID=<existing_group_id_that_has_access_policy_here>
+TEST_IMAGE_TAG=latest
