--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@toznysecure/sdk",
-  "version": "1.5.15",
+  "version": "1.5.16-alpha.1",
   "description": "Tozny Platform software developers kit.",
   "main": "index.js",
   "engines": {
